[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 312.0
margin_top = 470.0
margin_right = 772.0
margin_bottom = 535.0
text = "Clique aqui"

[node name="dado1" type="LineEdit" parent="."]
margin_left = 292.0
margin_top = 197.0
margin_right = 431.0
margin_bottom = 278.0

[node name="dado2" type="LineEdit" parent="."]
margin_left = 481.0
margin_top = 198.0
margin_right = 613.0
margin_bottom = 276.0

[node name="dado3" type="LineEdit" parent="."]
margin_left = 666.0
margin_top = 199.0
margin_right = 805.0
margin_bottom = 277.0

[node name="Label" type="Label" parent="."]
margin_left = 306.0
margin_top = 155.0
margin_right = 398.0
margin_bottom = 195.0
text = "Dado 1 "

[node name="Label2" type="Label" parent="."]
margin_left = 494.0
margin_top = 154.0
margin_right = 585.0
margin_bottom = 191.0
text = "Dado 2"

[node name="Label3" type="Label" parent="."]
margin_left = 668.0
margin_top = 147.0
margin_right = 769.0
margin_bottom = 189.0
text = "Dado 3"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 344.0
margin_top = 313.0
margin_right = 720.0
margin_bottom = 445.0

[node name="resposta" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0.0235294, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 376.0
margin_bottom = 132.0
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
