[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 364.0
margin_top = 282.0
margin_right = 664.0
margin_bottom = 381.0

[node name="Button" type="Button" parent="."]
margin_left = 112.0
margin_top = 62.0
margin_right = 345.0
margin_bottom = 151.0

[node name="Button2" type="Button" parent="."]
margin_left = 414.0
margin_top = 63.0
margin_right = 615.0
margin_bottom = 154.0

[node name="Button3" type="Button" parent="."]
margin_left = 672.0
margin_top = 64.0
margin_right = 898.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 120.0
margin_top = 159.0
margin_right = 337.0
margin_bottom = 233.0

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 419.0
margin_top = 159.0
margin_right = 609.0
margin_bottom = 237.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
